--- a/SkyRadar/app/src/main/res/values/strings.xml
+++ b/SkyRadar/app/src/main/res/values/strings.xml
@@ -76,4 +76,6 @@
     <string name="current_temperature_c">Current Temperature: %1$s°C</string>
     <string name="good_afternoon">Good Afternoon.</string>
     <string name="good_evening">Good Evening.</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
